.happypack/s--1858436950
SyntaxError: Unexpected token, expected , (87:16)

[0m [90m 85 | [39m                format[33m:[39m [32m'yyyy-mm-dd'[39m[33m,[39m
 [90m 86 | [39m                minView[33m:[39m [32m'month'[39m
[31m[1m>[22m[39m[90m 87 | [39m                endDate[33m:[39m [36mnew[39m [33mDate[39m([33mDate[39m[33m.[39mnow() [33m+[39m [35m86400[39m [33m*[39m [35m365[39m [33m*[39m [35m10[39m [33m*[39m [35m1000[39m)
 [90m    | [39m                [31m[1m^[22m[39m
 [90m 88 | [39m            })[33m;[39m
 [90m 89 | [39m            $([32m"#classroom_expiryValue"[39m)[33m.[39mdatetimepicker([32m'setStartDate'[39m[33m,[39m [36mnew[39m [33mDate[39m)[33m;[39m
 [90m 90 | [39m            [36mbreak[39m[33m;[39m[0m

BabelLoaderError: SyntaxError: Unexpected token, expected , (87:16)

[0m [90m 85 | [39m                format[33m:[39m [32m'yyyy-mm-dd'[39m[33m,[39m
 [90m 86 | [39m                minView[33m:[39m [32m'month'[39m
[31m[1m>[22m[39m[90m 87 | [39m                endDate[33m:[39m [36mnew[39m [33mDate[39m([33mDate[39m[33m.[39mnow() [33m+[39m [35m86400[39m [33m*[39m [35m365[39m [33m*[39m [35m10[39m [33m*[39m [35m1000[39m)
 [90m    | [39m                [31m[1m^[22m[39m
 [90m 88 | [39m            })[33m;[39m
 [90m 89 | [39m            $([32m"#classroom_expiryValue"[39m)[33m.[39mdatetimepicker([32m'setStartDate'[39m[33m,[39m [36mnew[39m [33mDate[39m)[33m;[39m
 [90m 90 | [39m            [36mbreak[39m[33m;[39m[0m

    at transpile (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:268:5)
    at /Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyWorker.js:32:3)
    at Object.HappyForegroundThreadPool.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:345:14)
    at HappyPlugin.compileInForeground (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:320:25)
    at HappyPlugin.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:236:32)
    at Object.HappyLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyLoader.js:34:15)
    at WEBPACK_CORE_LOADER_EXECUTION (/Users/kz/projects/edusoho/node_modules/.0.6.9@webpack-core/lib/NormalModuleMixin.js:155:71)